<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:orientation="vertical"
    android:padding="@dimen/dimen_normal_24"
    android:layout_height="wrap_content"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado_solucitud2"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/normal_16dp"
        android:text="@string/stimated_time_smart_solar"
        android:gravity="center"/>
    <Button
        android:id="@+id/btnAceptarDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/normal_16dp"
        android:text="@string/ok"/>



</LinearLayout>