<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">
    <ImageView
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_logo_iberdrola"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/normal_16dp"
        android:contentDescription="@string/logo_iberdrola" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="@dimen/normal_16dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:id="@+id/etUser"
            android:layout_marginBottom="@dimen/normal_16dp"
            android:autofillHints=""
            android:inputType="text" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/etPass"
                android:autofillHints=""
                android:inputType="text" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_eye"
                android:padding="@dimen/small_8dp"
                android:id="@+id/ivShowPass"
                android:contentDescription="@string/password" />

        </FrameLayout>

        <CheckBox
            android:id="@+id/cbRememberPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_pass"/>
        <TextView
            android:id="@+id/tvForgottenInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotten_info"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/dimen_normal_24">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_big_36"
            android:text="@string/login"
            android:id="@+id/btnLogin"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_8dp">

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/practice_grey"
                android:text="@string/you_can_also_see"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/tvText"
                android:background="@color/practice_grey"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tvText"
                android:background="@color/practice_grey"
                />

        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_big_36"
            android:text="@string/singup"
            app:strokeColor="@color/green"
            app:strokeWidth="2dp"
            android:textColor="@color/green"
            android:backgroundTint="@color/white"
            android:id="@+id/btnRegister"/>
    </LinearLayout>



</FrameLayout>