<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimen_big_48"
    android:padding="@dimen/dimen_normal_24"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/green">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/information_factura_title"
        style="@style/Title_Basic"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/not_enabled_function"
        android:layout_marginVertical="@dimen/dimen_normal_24"
        style="@style/subTitle_Basic"
        />
    <Button
        android:id="@+id/btnCloseDialogFacturas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/practice_grey"
        android:text="@string/close">
    </Button>

</LinearLayout>