<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">
    <ImageView
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_logo_iberdrola"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/normal_16dp"
        android:contentDescription="@string/logo_iberdrola" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="@dimen/normal_16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/new_user_register"
            style="@style/subTitle_Basic"
            android:layout_marginBottom="@dimen/normal_16dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:id="@+id/etUser"
            android:layout_marginBottom="@dimen/normal_16dp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_16dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/etPass"
                android:autofillHints=""
                app:passwordToggleEnabled="true"
                android:inputType="textPassword" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_eye"
                android:padding="@dimen/small_8dp"
                android:id="@+id/ivShowPass"
                android:contentDescription="@string/password" />

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_confirm"
                android:id="@+id/etConfirmPass"
                app:passwordToggleEnabled="true"
                android:autofillHints=""
                android:inputType="textPassword" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_eye"
                android:padding="@dimen/small_8dp"
                android:id="@+id/ivShowConfirmPass"
                android:contentDescription="@string/password" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/dimen_normal_24">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
            android:layout_width="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_big_36"
            android:text="@string/singup"
            android:id="@+id/btnRegister"/>
            <ProgressBar
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:progressTint="@color/white"
                app:layout_constraintTop_toTopOf="@id/btnRegister"
                app:layout_constraintBottom_toBottomOf="@id/btnRegister"
                app:layout_constraintEnd_toEndOf="@id/btnRegister"
                app:layout_constraintStart_toStartOf="@id/btnRegister"
                android:visibility="gone"
                android:layout_margin="@dimen/small_8dp"
                android:progressBackgroundTint="@color/white"
                android:id="@+id/pbSignUp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small_8dp">

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/practice_grey"
                android:text="@string/you_can_also_see"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/tvText"
                android:background="@color/practice_grey"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tvText"
                android:background="@color/practice_grey"
                />

        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_big_36"
            android:text="@string/back_to_login"
            app:strokeColor="@color/green"
            app:strokeWidth="2dp"
            android:textColor="@color/green"
            android:backgroundTint="@color/white"
            android:id="@+id/btnBackToLogin"/>
    </LinearLayout>



</FrameLayout>